[FIX] on profile.css max height for match log and div spACING fixed on upcoming matches

--- a/srcs/services/frontend/src/css/profile.css
+++ b/srcs/services/frontend/src/css/profile.css
@@ -47,6 +47,7 @@ a{
     font-size: x-small;
     text-align: left;
     overflow-y: auto;
+    max-height: 200px;
     /* color:#FCFF76!important; */
 }
 
